# micropython-pico-docs

./: .gitignore  README.md  mcu-pico.code-workspace  pyproject.toml
BMP280/: README.md  main.py  main_spi.py
BMP280-SPI/: README.md  TODO.md  bmp280_core.py  boot.py  main.py  rtc_core.py  setup.py  utils.py
BMP280-SPI/config/: bmp280.py  board.py  pico.py  sensors.py
BMP280-SPI/core/: base.py  bmp280.py  logger.py  rtc.py  spi.py
BMP280-SPI/optional/: logger.py
Blink/: main.py
DS1302-RTC/: main.py
Scripts/: demo_active_buzzer.py  demo_machine_freq.py  demo_rp2_pin.py  demo_rp2_timer.py  error_log.py  internal_temp.py  mem_limit.py  rp_demo_freq.py  timeit.py
docs/: micropython.md  micropython_libs.md  micropython_rp2.md  pico.md  rp.md
rover/: main.py  pyproject.toml
