[project]
name = "rover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "micropython-rp2-stubs>=1.25.0.post1",
]

[project.optional-dependencies]
# uv pip install -r pyproject.toml --extra stubs --target typings 
stubs = [
  "micropython-rp2-stubs"
]

[tool.mypy]
ignore_missing_imports = true
